# desktop-tutorial

./: .env.example  .gitignore  .mcp.json  AZURE_SETUP.md  CHECKPOINT_28_MAY.md  CHECKPOINT_TUESDAY_23_JUN.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  INSTALLATION_GUIDE.md  README.md  RECIR_Defense_v3_FINAL_PROOFED_2.pptx  SECURITY_HARDENING.md  SKILLLEGAL.md  ai-excellence-program-presentation.html  auth_device.py  auth_state.json  auth_step1.py  auth_step2.py  check_uninstalls.sh  config.yaml  contacts.csv  contacts_review.html  create_presentation.ipynb  create_presentation_executed.ipynb  docker-compose.yml  email_agent.py  index.html  install-openclaw.sh  openclaw-security-guide.md  openclaw_installation_guide.ipynb  openclaw_installation_guide.pptx  openclaw_installation_guide_executed.ipynb  posts-queue.json  presentation_ai_intro.pptx  pyproject.toml  rift-lalum.html  send_pilot.py  send_test.py  skill.html  (+11 more)
.claude/: settings.json
.github/: pull_request_template.md
agent-dashboard/: package-lock.json  package.json  vitest.config.ts
ai-education-program/: README.md  dashboard.html
ai-governance-legal/: CLAUDE.md  README.md
algo-billing/: CLAUDE.md  README.md  SUPABASE_SETUP.md  index.html  package.json
assets/: index-BpsglyrF.css  index-myw3YLWD.js
avatar-config/: soul_config.json
cases/: INDEX.md
dashboard/: agents.html  index.html
docs/: 01-PRD.md  02-feature-map.md  03-user-flows.md  04-database-schema.md  05-system-architecture.md  06-api-design.md  07-ai-architecture.md  08-security-architecture.md  09-monetization.md  10-roadmap-24mo.md  (+2 more)
(+602 files in other folders)
