[project]
name = "prompt-builder-agent"
version = "0.1.0"
description = "סוכן לבניית פרומפטים מובנים לפיתוח אפליקציות"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "msal>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
prompt-builder = "prompt_builder.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
