[project]
name = "prompt-builder-agent"
version = "0.1.0"
description = "סוכן לבניית פרומפטים מובנים לפיתוח אפליקציות"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    # Job Agent dependencies
    "playwright>=1.40.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
]

[project.scripts]
prompt-builder = "prompt_builder.cli:main"
job-agent = "job_agent.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
